Back ground to fit correctly on mobile

--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -16,7 +16,7 @@ video {
   justify-content: center;
   align-items: center;
   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
-  object-fit: contain;
+  object-fit: scale-down;
 }
 
 .hero-container > h1 {
