--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -5,9 +5,10 @@
   justify-content: center;
   align-items: center;
   font-size: 1.2rem;
-  position: sticky;
+  position: fixed;
   top: 0;
-  z-index: 999;
+  z-index: 100;
+  width: 100%;
 }
 
 .navbar-container {
@@ -136,7 +137,7 @@
   }
 
   .nav-links-mobile {
-    display: block;
+    display: flex;
     text-align: center;
     margin: 2rem auto;
     border-radius: 4px;
@@ -145,7 +146,6 @@
     font-size: 1.5rem;
     background-color: transparent;
     color: #fff;
-    padding: 14px 20px;
     border: 1px solid #fff;
     transition: all 0.3s ease-out;
   }
